--- a/my-website/index.html
+++ b/my-website/index.html
@@ -1046,11 +1046,7 @@
             { name: 'VidSrc.to ⭐', url: (id) => `https://vidsrc.to/embed/movie/${id}` },
             { name: 'VidSrc.Pro', url: (id) => `https://vidsrc.xyz/embed/movie/${id}` },
             { name: 'SuperEmbed', url: (id) => `https://multiembed.mov/?video_id=${id}&tmdb=1` },
-            { name: 'Embed.su', url: (id) => `https://embed.su/embed/movie/${id}` },
-            { name: 'VidSrc.me', url: (id) => `https://vidsrc.me/embed/movie?tmdb=${id}` },
-            { name: 'NontonGo', url: (id) => `https://www.NontonGo.win/embed/movie/${id}` },
-            { name: 'VidLink', url: (id) => `https://vidlink.pro/movie/${id}` },
-            { name: 'AutoEmbed', url: (id) => `https://autoembed.cc/movie/tmdb/${id}` }
+            { name: 'Embed.su', url: (id) => `https://embed.su/embed/movie/${id}` }
         ];
 
         let currentServerIndex = 0;
